[gd_scene load_steps=10 format=3 uid="uid://d1wrwq3loathi"]

[ext_resource type="PackedScene" uid="uid://rgppari7ihx4" path="res://3D/Guns/blasterC.glb" id="1_bxc87"]
[ext_resource type="Script" path="res://Scripts/Gun.gd" id="2_hd862"]
[ext_resource type="AudioStream" uid="uid://cnmpweeugjf5g" path="res://Sounds/SFX/GameFX_Shoot_01.wav" id="3_46ryt"]
[ext_resource type="AudioStream" uid="uid://8v78orx7vd1g" path="res://Sounds/SFX/GameFX_Shoot_02.wav" id="4_5843r"]
[ext_resource type="AudioStream" uid="uid://425fnufx2ake" path="res://Sounds/SFX/GameFX_Shoot_03.wav" id="5_76jl0"]

[sub_resource type="Animation" id="Animation_1amp2"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("blasterC:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector3(0, 0, 0)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("blasterC:rotation")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector3(0, 0, 0)]
}

[sub_resource type="Animation" id="Animation_g0x8g"]
resource_name = "fire"
length = 0.3
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("blasterC:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.3),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [Vector3(0, 0, 0), Vector3(0, 0, -0.180682), Vector3(0, 0, 0)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("blasterC:rotation")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.1, 0.3),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [Vector3(0, 0, 0), Vector3(-0.773739, 0, 0), Vector3(0, 0, 0)]
}

[sub_resource type="Animation" id="Animation_ioj7m"]
resource_name = "idle"
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("blasterC:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.5, 1),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [Vector3(0, 0, 0), Vector3(0, -0.201028, 0), Vector3(0, 0, 0)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_yq7k6"]
_data = {
"RESET": SubResource("Animation_1amp2"),
"fire": SubResource("Animation_g0x8g"),
"idle": SubResource("Animation_ioj7m")
}

[node name="Gun" instance=ExtResource("1_bxc87")]
script = ExtResource("2_hd862")

[node name="Muzzle" type="Node3D" parent="blasterC" index="0"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.0148008, 0.268862)

[node name="AnimationPlayer" type="AnimationPlayer" parent="." index="1"]
libraries = {
"": SubResource("AnimationLibrary_yq7k6")
}

[node name="Sound1" type="AudioStreamPlayer3D" parent="." index="2"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, 0.269611)
stream = ExtResource("3_46ryt")
volume_db = -8.0

[node name="Sound2" type="AudioStreamPlayer3D" parent="." index="3"]
stream = ExtResource("4_5843r")
volume_db = -8.0

[node name="Sound3" type="AudioStreamPlayer3D" parent="." index="4"]
stream = ExtResource("5_76jl0")
volume_db = -8.0
